<resources>
    <string name="app_name">TextEditor</string>

    <string name="greeting">Open drawer for options</string>

    <string name="action_undo">Undo</string>
    <string name="action_done">Save and Close</string>
    <string name="action_other_actions">Other actions</string>

    <string name="action_save">Save</string>
    <string name="action_save_as">Save as</string>
    <string name="action_redo">Redo</string>
    <string name="action_font_options">Font options</string>
    <string name="action_search">Search</string>
    <string name="action_replace">Replace</string>
    <string name="action_zoom_plus">Zoom +</string>
    <string name="action_zoom_minus">Zoom -</string>
    <string name="action_text_wrap">Text Wrap</string>
    <string name="action_suggestions">Suggestions</string>
    <string name="action_share">Share</string>
    <string name="action_close">Close</string>

    <string name="key_theme">theme</string>
    <string name="themes">Theme</string>
    <string name="themes_description">
        Select the desired application skin
    </string>
    <string name="languages">Language</string>
    <string name="edit_translation">Edit translation</string>
    <string name="edit_translation_description">
        Your changes will be applied immediately and will also be sent, to help them improve this application
    </string>
    <string name="add_language">Add language</string>
    <string name="add_language_description">Translate unsupported language</string>
    <string name="credits">Credits</string>
    <string name="credits_description">Credits</string>
    <string name="new_file">New file</string>
    <string name="open_file">Open file...</string>
    <string name="settings">Settings</string>
    <string name="replace_text">Заменить...</string>
    <string name="search_text">Поиск...</string>

    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
</resources>
