<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo_black_24dp"
        android:title="@string/action_undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/action_done"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/action_save"
                    android:icon="@drawable/ic_save_black_24dp"
                    android:title="@string/action_save"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_save_as"
                    android:title="@string/action_save_as"
                    android:icon="@drawable/ic_baseline_save_alt_24px"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_redo"
                    android:title="@string/action_redo"
                    android:icon="@drawable/ic_redo_black_24dp"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_show_font_options"
                    android:title="@string/action_font_options"
                    android:icon="@drawable/ic_font_download_black_24dp"
                    android:checkable="true"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_search"
                    android:title="@string/action_search"
                    android:icon="@drawable/ic_search_black_24dp"
                    android:checkable="true"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_replace"
                    android:title="@string/action_replace"
                    android:icon="@drawable/ic_find_replace_black_24dp"
                    android:checkable="true"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_zoom_in"
                    android:title="@string/action_zoom_plus"
                    android:icon="@drawable/ic_zoom_in_black_24dp"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_zoom_out"
                    android:title="@string/action_zoom_minus"
                    android:icon="@drawable/ic_zoom_out_black_24dp"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_text_wrap"
                    android:title="@string/action_text_wrap"
                    android:icon="@drawable/ic_wrap_text_black_24dp"
                    android:checkable="true"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_show_suggestions"
                    android:title="@string/action_suggestions"
                    android:icon="@drawable/ic_screen_share_black_24dp"
                    android:checkable="true"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_share"
                    android:title="@string/action_share"
                    android:icon="@drawable/ic_share_black_24dp"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/action_close"
                    android:title="@string/action_close"
                    android:icon="@drawable/ic_close_black_24dp"
                    app:showAsAction="ifRoom"/>
            </group>
        </menu>
    </item>
</menu>