<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Fragments.EditFieldFragment">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">
    </FrameLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_rect"
                android:layout_marginTop="30dp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_rect"
                android:layout_marginTop="30dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/new_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_file"
            android:layout_marginTop="100dp"
            android:drawableLeft="@drawable/ic_add_circle_black_24dp"/>
        <Button
            android:id="@+id/edit_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_file"
            android:layout_marginTop="150dp"
            android:drawableLeft="@drawable/ic_edit_black_24dp"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginTop="200dp"
            android:drawableLeft="@drawable/ic_settings_black_24dp"/>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>